--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </svg>
               </div>
               <h3 class="subtitle">Внимание к деталям</h3>
-              <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+              <p class="specifications-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="specifications-item">
               <div class="container-svg">
@@ -76,7 +76,7 @@
                 </svg>
               </div>
               <h3 class="subtitle">Пунктуальность</h3>
-              <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+              <p class="specifications-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li class="specifications-item">
               <div class="container-svg">
@@ -86,7 +86,7 @@
               </div>
 
               <h3 class="subtitle">Планирование</h3>
-              <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+              <p class="specifications-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="specifications-item">
               <div class="container-svg">
@@ -95,7 +95,7 @@
                 </svg>
               </div>
               <h3 class="subtitle">Современные технологии</h3>
-              <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+              <p class="specifications-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
           </ul>
           <h2 class="title">Чем мы занимаемся</h2>
